/*
 *  Copyright 2017 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciSensorTrigger";
option optimize_for = LITE_RUNTIME;

import "sensor_trigger_information.proto";

/*
 * Represents a sensor trigger.
 */
message SensorTrigger {
    // The unique ID of this trigger.
    optional string triggerId = 1;

    // The sensor ID associated with this trigger.
    optional string sensorId = 2;

    // The timestamp of when this trigger was last used.
    optional int64 lastUsedMs = 3;

    // The Trigger Information describing this trigger.
    optional TriggerInformation triggerInformation = 4;
}